# ble-scale

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  update_requirements.ps1
src/: __init__.py  ble_conection.py  ble_defines.py  main.py  print_handler.py
src/interfaces/: interfaces.py
