[project]
name = "ble-scale"
version = "0.1.0"
description = "BLE scale reader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.2",
    "bleak==1.1.1",
    # Windows-specific dependencies
    "winrt-runtime==3.2.1; sys_platform == \"win32\"",
    "winrt-Windows.Devices.Bluetooth==3.2.1; sys_platform == \"win32\"",
    "winrt-Windows.Devices.Bluetooth.Advertisement==3.2.1; sys_platform == \"win32\"",
    "winrt-Windows.Devices.Bluetooth.GenericAttributeProfile==3.2.1; sys_platform == \"win32\"",
    "winrt-Windows.Devices.Enumeration==3.2.1; sys_platform == \"win32\"",
    "winrt-Windows.Foundation==3.2.1; sys_platform == \"win32\"",
    "winrt-Windows.Foundation.Collections==3.2.1; sys_platform == \"win32\"",
    "winrt-Windows.Storage.Streams==3.2.1; sys_platform == \"win32\"",
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "mypy==1.18.1",
    "pre_commit==4.3.0",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "ruff==0.13.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
